Added more manipulations and done some changes

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <p class="math"><span id="math">...</span></p>
 <p></p>
 <p class="buttons">
-	<!--<input type="checkbox" name="multi_select" id="multi_select"/> Select multiple? <span class="note">(only works with factors for now)</span>-->
+	<input type="checkbox" name="multi_select" id="multi_select"/> Select multiple? <span class="note">(doesn't work for some things atm!)</span>
 	<button class="manip" id="factor">Select factor</button>
 	&nbsp;
 	<button class="manip" id="term">Select term</button>
@@ -23,6 +23,8 @@
 	<button id="change_side">Change side</button>
 	&nbsp;
 	<button id="divide_factor">Divide by factor</button>
+	&nbsp;
+	<button id="eval">Evaluate</button>
 </p>
 
 
@@ -30,6 +32,7 @@
 <!--<script src="http://cdnjs.cloudflare.com/ajax/libs/gsap/1.17.0/TweenMax.min.js"></script>-->
 <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/libs/jquery.min.js">\x3C/script>')</script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/1.7.0/math.js"></script>
 <script src="script.js"></script>
 
 </body>
