--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 
-<p id="MathInput">Input some algebraic equation (and press ENTER): <input size="50" onchange="prepare(this.value)" /></p>
+<p id="MathInput">Input some algebraic equation: <input size="50" onchange="prepare(this.value)" /></p>
 
 <p class="math"><span id="math">...</span></p>
 <p></p>
-<p class="buttons">
+<div class="manip">
 	<label><input type="checkbox" name="multi_select" id="multi_select"/> Select multiple? <!--<span class="note">(doesn't work for some things atm!)--></span></label>
 	<label>Manipulative: 
 		<select class="traverse" id="manip">
@@ -30,19 +30,25 @@
 	<label> Depth: 
 		<input type="number" min="1" step="1" value="1" class="traverse" id="depth">
 	</label>
-	&nbsp;&nbsp;&nbsp;&nbsp;
+</div>
+<div class="basic_ops">
 	<button id="change_side">Change side</button>
 	&nbsp;
 	<button id="divide_factor">Divide by factor</button>
 	&nbsp;
-<!--	<button id="root_power">Root by power</button> -->
+	<button id="root_power">Root by power</button>
 	&nbsp;
 	<button id="eval">Evaluate/Simplify</button>
 	&nbsp;
-	<button id="move_right">-></button>
 	<button id="move_left">&lt;-</button>
-</p>
-
+	<button id="move_right">-></button>
+</div>
+<div class="more_ops">
+	<label id="add_both_sides">Add to both sides: <input size="50" onchange="add_both_sides(this.value)" /></label>
+	&nbsp;
+	<button id="split_frac">Split fraction</button>
+	&nbsp;
+</div>
 
 <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.3.0/katex.min.js"></script>-->
 <script>window.katex || document.write('<script src="../../js/libs/katex.min.js">\x3C/script>')</script>
