Improved some manipulations, and added distribution and factoring of factors

--- a/index.html
+++ b/index.html
@@ -53,15 +53,22 @@
 </div>
 <br>
 <div class="row more_ops">
-	<label>Add to both sides: <input id="add_both_sides" size="50" onchange="add_both_sides(this.value)" /></label>
+	<label>Add to both sides: <input id="add_both_sides" size="20" onchange="add_both_sides(this.value)" /></label>
 	&nbsp;
 	<button type="button" class="btn btn-default" id="split_frac">Split fraction</button>
 	&nbsp;
-	<span>Free editing: <button type="button" class="btn btn-default" id="remove">Remove</button></span>
+</div>
+<br>
+<div class="row more_ops">
+	<button type="button" class="btn btn-default" id="remove">Remove</button>
 	&nbsp;
 	<button type="button" class="btn btn-default" id="unbracket">Unbracket</button>
 	&nbsp;
-	<label>Replace: <input id="replace" size="50" onchange="replace(this.value)" /></label>
+	<label>Replace: <input id="replace" size="20" onchange="replace(this.value)" /></label>
+	&nbsp;
+	<button type="button" class="btn btn-default" id="distribute_in">Distribute in</button>
+	&nbsp;
+	<button type="button" class="btn btn-default" id="factor_out">Factor out</button>
 	&nbsp;
 </div>
 </div>
