Added some validation, fixed some animations, added some comments

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </div>
 <br>
 <div class="row more_ops">
-	<label>Add to both sides: <input id="add_both_sides" size="20" onchange="add_both_sides(this.value)" /></label>
+	<label>Append to both sides: <input id="add_both_sides" size="20" onchange="add_both_sides(this.value)" /></label>
 	&nbsp;
 	<button type="button" class="btn btn-default" id="split_frac">Split fraction</button>
 	&nbsp;
