Added simple record and play capabilities. This is useful for making presentations, something I'll be testing soon

--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@
 	&nbsp;
 	<button type="button" class="btn btn-default" id="redo">Redo</button>
 	&nbsp;
+	<label><input type="checkbox" id="recording"/> Recording</span></label>
+	&nbsp;
+	<button type="button" class="btn btn-default" id="play">Play</button>
+	&nbsp;
+	<button type="button" class="btn btn-default" id="next_step">Next Step</button>
+	&nbsp;
+	<button type="button" class="btn btn-default" id="prev_step">Previous Step</button>
+	&nbsp;
 </div>
 </div>
 
