Started change merging manipulations

--- a/index.html
+++ b/index.html
@@ -46,33 +46,25 @@
 	&nbsp;
 	<button type="button" class="btn btn-default" id="change_side">Change side</button>
 	&nbsp;
-	<button type="button" class="btn btn-default" id="divide_factor">Divide by factor</button>
+	<button type="button" class="btn btn-default" id="move_left">&lt;-</button>
+	<button type="button" class="btn btn-default" id="move_right">-></button>
 	&nbsp;
-	<button type="button" class="btn btn-default" id="root_power">Root by power</button>
+	<button type="button" class="btn btn-default" id="push">Push/Split</button>
+	&nbsp;
+	<button type="button" class="btn btn-default" id="pull">Pull/Merge</button>
 	&nbsp;
 	<button type="button" class="btn btn-default" id="eval">Evaluate/Simplify</button>
 	&nbsp;
-	<button type="button" class="btn btn-default" id="move_left">&lt;-</button>
-	<button type="button" class="btn btn-default" id="move_right">-></button>
 </div>
 <br>
 <div class="row more_ops">
 	<label>Append to both sides: <input id="add_both_sides" size="20"/></label>
 	&nbsp;
-	<button type="button" class="btn btn-default" id="split_frac">Split fraction</button>
+	<label>Replace: <input id="replace" size="20" /></label>
 	&nbsp;
-</div>
-<br>
-<div class="row more_ops">
 	<button type="button" class="btn btn-default" id="remove">Remove</button>
 	&nbsp;
 	<button type="button" class="btn btn-default" id="unbracket">Unbracket</button>
-	&nbsp;
-	<label>Replace: <input id="replace" size="20" /></label>
-	&nbsp;
-	<button type="button" class="btn btn-default" id="distribute_in">Distribute in</button>
-	&nbsp;
-	<button type="button" class="btn btn-default" id="factor_out">Factor out</button>
 	&nbsp;
 </div>
 <br>
