Added up and down manipulatives

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
 	<button type="button" class="btn btn-default" id="change_side">Change side</button>
 	&nbsp;
 	<button type="button" class="btn btn-default" id="move_left">&lt;-</button>
+	<button type="button" class="btn btn-default" id="move_up">^</button>
+	<button type="button" class="btn btn-default" id="move_down">v</button>
 	<button type="button" class="btn btn-default" id="move_right">-></button>
 	&nbsp;
 	<button type="button" class="btn btn-default" id="push">Push/Split</button>
