--- a/augmath.html
+++ b/augmath.html
@@ -6,6 +6,16 @@
 	<link rel="stylesheet" href="css/mathquill.css">
   <link rel="stylesheet" href="css/qunit-1.20.0.css">
 
+  <script src="js/jquery.js"></script>
+  <script src="js/jquery-ui.js"></script>
+  <script src="js/qunit-1.20.0.js"></script>
+  <script src="js/mathquill.js"></script>
+  <script src="js/katex.min.js"></script>
+  <script src="js/symbols.js"></script>
+  <script src="js/math.js"></script>
+  <script src="js/coffeequate.js"></script>
+  <script src="js/TreeModel.js"></script>
+
 	 <style type="text/css">
 	.sortable-placeholder {
 	  margin: 0px; padding: 5px; width: 15px;
@@ -245,16 +255,7 @@
   <div id="qunit"></div>
 </div>
 
-<script src="js/symbols.js"></script>
-<script src="js/katex.min.js"></script>
-<script src="js/jquery.js"></script>
-<script src="js/math.js"></script>
-<script src="js/coffeequate.js"></script>
-<script src="js/TreeModel.js"></script>
-<script src="js/jquery-ui.js"></script>
-<script src="js/mathquill.js"></script>
-<script src="js/qunit-1.20.0.js"></script>
-<script type="text/javascript" src="js/script.js"></script> <!--augmath-->
-<script type="text/javascript" src="js/tests.js"></script> <!--tests-->
+<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/tests.js"></script>
 
 </body>
