--- a/augmath.html
+++ b/augmath.html
@@ -9,11 +9,13 @@
   <script src="js/jquery.js"></script>
   <script src="js/jquery-ui.js"></script>
   <script src="js/qunit-1.20.0.js"></script>
-  <script src="js/katex.min.js"></script>
+  <script src="js/next/katex.min.js"></script>
   <script src="js/symbols.js"></script>
   <script src="js/math.js"></script>
-  <script src="js/coffeequate.js"></script>
+  <script src="js/next/coffeequate.js"></script>
   <script src="js/TreeModel.js"></script>
+  <script type="text/javascript" src="js/next/mathquill.min.js"></script>
+
 
 	 <style type="text/css">
 	.sortable-placeholder {
@@ -255,8 +257,6 @@
 </div>
 <script type="text/javascript" src="js/tests.js"></script> -->
 
-<script src="js/mathquill.min.js"></script>
-
-<script type="text/javascript" src="js/script.js"></script>
+<script type="text/javascript" src="js/next/final/script.js"></script>
 
 </body>
