several bug fixed and added algebrite

--- a/augmath.html
+++ b/augmath.html
@@ -13,6 +13,8 @@
   <script src="js/symbols.js"></script>
   <script src="js/math.js"></script>
   <script src="js/next/coffeequate.js"></script>
+  <script src="js/BigInteger.min.js"></script>
+  <script src="js/next/algebrite.js"></script>
   <script src="js/TreeModel.js"></script>
   <script type="text/javascript" src="js/next/mathquill.min.js"></script>
 
@@ -66,7 +68,7 @@
 						<option value="factor">Factor</option>
 						<option value="power">Power</option>
 						<option value="base">Base</option>
-						<option value="nominator">Nominator</option>
+						<option value="numerator">Numerator</option>
 						<option value="denominator">Denominator</option>
 						<option value="available">Available (binom)</option>
 						<option value="chosen">Chosen (binom)</option>
@@ -252,10 +254,10 @@
 </div> <!--end of container-->
 
 <!--testing-->
-<!-- <div class="container-fluid">
+<div class="container-fluid">
   <div id="qunit"></div>
 </div>
-<script type="text/javascript" src="js/tests.js"></script> -->
+<script type="text/javascript" src="js/tests.js"></script>
 
 <script type="text/javascript" src="js/next/final/script.js"></script>
 
