Made move left and right work with cdot multiplication

--- a/client/main.html
+++ b/client/main.html
@@ -1,23 +1,22 @@
 <head>
   	<title>Augmath</title>
- 	<link rel="stylesheet" href="css/jquery-ui.css">
+ 	<link rel="stylesheet" href="css/jquery-ui.min.css">
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="css/katex/katex.min.css">
 	<link rel="stylesheet" href="css/mathquill.css">
   <link rel="stylesheet" href="css/qunit-1.20.0.css">
+  <link rel="stylesheet" href="css/main.css">
 
   <script src="js/jquery.js"></script>
-  <script src="js/jquery-ui.js"></script>
-  <script src="js/qunit-1.20.0.js"></script>
-  <script src="js/next/katex.min.js"></script>
+  <script src="js/next/qunit-1.20.0.js"></script>
+  <script src="js/next/jquery-ui.min.js"></script>
+  <script src="js/BigInteger.min.js"></script>
+  <script src="js/katex.min.js"></script>
   <script src="js/symbols.js"></script>
   <script src="js/math.js"></script>
-  <script src="js/next/coffeequate.js"></script>
-  <script src="js/BigInteger.min.js"></script>
-  <script src="js/next/algebrite.js"></script>
+  <script src="js/coffeequate.js"></script>
   <script src="js/TreeModel.js"></script>
-  <script type="text/javascript" src="js/next/mathquill.min.js"></script>
-
+  <script src="js/mathquill.min.js"></script>
 
 	 <style type="text/css">
 	.sortable-placeholder {
@@ -254,11 +253,14 @@
 </div> <!--end of container-->
 
 <!--testing-->
-<div class="container-fluid">
+<!-- <div class="container-fluid">
   <div id="qunit"></div>
-</div>
-<script type="text/javascript" src="js/tests.js"></script>
+</div> -->
+<!-- <script src="js/next/final/tests.js"></script> -->
 
-<script type="text/javascript" src="js/next/final/script.js"></script>
+
+<!-- <script src="js/next/algebrite.js"></script> -->
+
+<script src="js/next/final/augmath.js"></script>
 
 </body>
