--- a/client/main.html
+++ b/client/main.html
@@ -10,11 +10,12 @@
   <script src="js/jquery.js"></script>
   <script src="js/next/qunit-1.20.0.js"></script>
   <script src="js/next/jquery-ui.min.js"></script>
-  <script src="js/BigInteger.min.js"></script>
+  <!-- <script src="js/BigInteger.min.js"></script> -->
+  <!-- <script src="http://peterolson.github.com/BigInteger.js/BigInteger.min.js"></script> -->
   <script src="js/katex.min.js"></script>
   <script src="js/symbols.js"></script>
   <script src="js/math.js"></script>
-  <script src="js/coffeequate.js"></script>
+  <script src="js/algebra.min.js"></script>
   <script src="js/TreeModel.js"></script>
   <script src="js/mathquill.min.js"></script>
 
@@ -253,13 +254,13 @@
 </div> <!--end of container-->
 
 <!--testing-->
-<!-- <div class="container-fluid">
+<div class="container-fluid">
   <div id="qunit"></div>
-</div> -->
-<!-- <script src="js/next/final/tests.js"></script> -->
+</div>
+<script src="js/next/final/tests.js"></script>
 
 
-<!-- <script src="js/next/algebrite.js"></script> -->
+<script src="js/next/algebrite.bundle-for-browser.js"></script>
 
 <script src="js/next/final/augmath.js"></script>
 
