refactored manipulation validations and logic with brototype and functions

--- a/client/main.html
+++ b/client/main.html
@@ -10,6 +10,7 @@
   <script src="js/jquery.js"></script>
   <script src="js/next/qunit-1.20.0.js"></script>
   <script src="js/next/jquery-ui.min.js"></script>
+  <script src="js/brototype.js"></script>
   <!-- <script src="js/BigInteger.min.js"></script> -->
   <!-- <script src="http://peterolson.github.com/BigInteger.js/BigInteger.min.js"></script> -->
   <script src="js/katex.min.js"></script>
