--- a/client/main.html
+++ b/client/main.html
@@ -125,11 +125,11 @@
 					</button>
 				</li>
 				<li class="list-group-item">
-					<button type="button" class="btn btn-default" id="split">
-						Split
+					<button type="button" class="btn btn-default" id="distribute-in">
+						Distribute in
 					</button>
-					<button type="button" class="btn btn-default" id="merge">
-						Merge
+					<button type="button" class="btn btn-default" id="collect-out">
+						Collect out
 					</button>
 				</li>
 				<button type="button" class="list-group-item" id="eval">
@@ -204,11 +204,20 @@
 				</div>
 
 				<div class="btn-group ">
+					<button type="button" class="btn btn-default" id="tb-distribute-in">
+						Distribute in
+					</button>
+					<button type="button" class="btn btn-default" id="tb-collect-out">
+						Collect out
+					</button>
+				</div>
+
+        <div class="btn-group ">
 					<button type="button" class="btn btn-default" id="tb-split">
-						Split
+						Split out
 					</button>
 					<button type="button" class="btn btn-default" id="tb-merge">
-						Merge
+						Merge in
 					</button>
 				</div>
 
@@ -255,10 +264,10 @@
 </div> <!--end of container-->
 
 <!--testing-->
-<div class="container-fluid">
+<!-- <div class="container-fluid">
   <div id="qunit"></div>
 </div>
-<script src="js/next/final/tests.js"></script>
+<script src="js/next/final/tests.js"></script> -->
 
 
 <script src="js/next/algebrite.bundle-for-browser.js"></script>
