--- a/client/main.html
+++ b/client/main.html
@@ -227,6 +227,9 @@
 				<button type="button" class="btn btn-default" id="tb-operate">
 					Operate
 				</button>
+        <button type="button" class="btn btn-default" id="tb-cancel-out">
+					Cancel out
+				</button>
 			</div>
 		</div>
 		<div class="row">
@@ -264,10 +267,10 @@
 </div> <!--end of container-->
 
 <!--testing-->
-<!-- <div class="container-fluid">
+<div class="container-fluid">
   <div id="qunit"></div>
 </div>
-<script src="js/next/final/tests.js"></script> -->
+<script src="js/next/final/tests.js"></script>
 
 
 <script src="js/next/algebrite.bundle-for-browser.js"></script>
