--- a/client/main.html
+++ b/client/main.html
@@ -4,21 +4,8 @@
 	<link rel="stylesheet" href="css/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="css/katex/katex.min.css">
 	<link rel="stylesheet" href="css/mathquill.css">
-  <link rel="stylesheet" href="css/qunit-1.20.0.css">
+  <link rel="stylesheet" href="css/qunit-2.0.0.css">
   <link rel="stylesheet" href="css/main.css">
-
-  <script src="js/jquery.js"></script>
-  <script src="js/next/qunit-1.20.0.js"></script>
-  <script src="js/next/jquery-ui.min.js"></script>
-  <script src="js/brototype.js"></script>
-  <!-- <script src="js/BigInteger.min.js"></script> -->
-  <!-- <script src="http://peterolson.github.com/BigInteger.js/BigInteger.min.js"></script> -->
-  <script src="js/katex.min.js"></script>
-  <script src="js/symbols.js"></script>
-  <script src="js/math.js"></script>
-  <script src="js/algebra.min.js"></script>
-  <script src="js/TreeModel.js"></script>
-  <script src="js/mathquill.min.js"></script>
 
 	 <style type="text/css">
 	.sortable-placeholder {
@@ -57,224 +44,15 @@
 </nav>
 
 <!--container-->
-<div class="container-fluid">
-	<div class="col-md-3 toolbar"> <!--TOOLBAR PANEL-->
-		<ul id="tools" class="list-group text-center">
-			<h4>Selection</h4> <!--fix this -->
-			<div>
-				<li class="list-group-item">
-					<span>Manipulative:
-					<select class="traverse" id="manip">
-						<option value="term" selected>Term</option>
-						<option value="factor">Factor</option>
-						<option value="power">Power</option>
-						<option value="base">Base</option>
-						<option value="numerator">Numerator</option>
-						<option value="denominator">Denominator</option>
-						<option value="available">Available (binom)</option>
-						<option value="chosen">Chosen (binom)</option>
-						<option value="sup">Superscript</option>
-						<option value="sub">Subscript</option>
-					</select>
-				</span>
-				</li>
-				<li class="list-group-item">
-					<span>Select multiple <input type="checkbox" name="multi_select" id="multi_select"/></span>
-					<br>
-					<span>Select variable <input type="checkbox" name="multi_select" id="var_select"/></span>
-				</li>
-				<li class="list-group-item">
-					<span> Depth:
-						<input type="number" min="1" step="1" value="1" class="traverse" id="depth">
-					</span>
-				</li>
-			</div>
-			<h4>Manipulations</h4>
-			<div>
-				<li class="list-group-item">
-					<button type="button" class="btn btn-default" id="undo">
-						Undo
-					</button>
-					<button type="button" class="btn btn-default" id="redo">
-						Redo
-					</button>
-				</li>
-				<li class="list-group-item">
-					<button type="button" class="btn btn-default" id="flip_equation">
-						Flip equation
-					</button>
-					<button type="button" class="btn btn-default" id="change_side">
-						Change side
-					</button>
-				</li>
-				<li class="list-group-item">
-					<button type="button" class="btn btn-default" id="move_up">
-							<span class="glyphicon glyphicon-arrow-up"></span>
-					</button>
-					<div class="row">
-						<button type="button" class="btn btn-default" id="move_left">
-							<span class="glyphicon glyphicon-arrow-left"></span>
-						</button>
-						<span>Move selection</span>
-						<button type="button" class="btn btn-default" id="move_right">
-							<span class="glyphicon glyphicon-arrow-right"></span>
-						</button>
-					</div>
-					<button type="button" class="btn btn-default" id="move_down">
-							<span class="glyphicon glyphicon-arrow-down"></span>
-					</button>
-				</li>
-				<li class="list-group-item">
-					<button type="button" class="btn btn-default" id="distribute-in">
-						Distribute in
-					</button>
-					<button type="button" class="btn btn-default" id="collect-out">
-						Collect out
-					</button>
-				</li>
-				<button type="button" class="list-group-item" id="eval">
-					Evaluate/Simplify
-				</button>
-				<button type="button" class="list-group-item" id="operate">
-					Operate
-				</button>
-				<li class="list-group-item">
-					<label>Append to both sides: <input id="add_both_sides" size="20" placeholder="Type LaTeX here" /></label>
-				</li>
-				<li class="list-group-item">
-					<label>Replace selection with: <input id="replace" size="20" placeholder="Type LaTeX here" onchange="replace(this.	value)" /></label>
-					<span>Replace individually <input type="checkbox" name="multi_select" id="replace_ind"/></span>
-				</li>
-				<button type="button" class="list-group-item" id="remove">
-					Remove
-				</button>
-				<button type="button" class="list-group-item" id="unbracket">
-					Unbracket
-				</button>
-			</div>
-			<h4>Recording</h4>
-			<div>
-				<li class="list-group-item">
-					<span>Recording <input type="checkbox" name="recording" id="recording"/></span>
-				</li>
-				<button type="button" class="list-group-item" id="make_json">
-					Save JSON
-				</button>
-				<button type="button" class="list-group-item" id="play">
-					Play
-				</button>
-				<button type="button" class="list-group-item" id="prev_step">
-					Previous Step
-				</button>
-				<button type="button" class="list-group-item" id="next_step">
-					Next Step
-				</button>
-			</div>
-		</ul>
-	</div> <!--end of TOOLBAR PANEL-->
+<div class="container-fluid" id="app">
 
-<!--<div id="qunit-fixture"> div for qunit testing the DOM-->
-	<div class="col-md-6"> <!--MAIN PANEL-->
-		<div class="row">
-			<div class="bottom-buffer btn-toolbar" role="toolbar">
-    			  <div class="btn-group">
-    			    <button id="tb-undo" class="btn btn-default">Undo</button> <!--tb means toolbar-->
-    			    <button id="tb-redo" class="btn btn-default">Redo</button>
-    			  </div>
-    			<button type="button" class="btn btn-default " id="tb-flip_equation">
-					Flip equation
-				</button>
-				<button type="button" class="btn btn-default " id="tb-change_side">
-					Change side
-				</button>
-
-				<div class="btn-group ">
-					<button type="button" class="btn btn-default" id="tb-move_up">
-							<span class="glyphicon glyphicon-arrow-up"></span>
-					</button>
-					<button type="button" class="btn btn-default" id="tb-move_left">
-						<span class="glyphicon glyphicon-arrow-left"></span>
-					</button>
-					<button type="button" class="btn btn-default" id="tb-move_right">
-						<span class="glyphicon glyphicon-arrow-right"></span>
-					</button>
-					<button type="button" class="btn btn-default" id="tb-move_down">
-							<span class="glyphicon glyphicon-arrow-down"></span>
-					</button>
-				</div>
-
-				<div class="btn-group ">
-					<button type="button" class="btn btn-default" id="tb-distribute-in">
-						Distribute in
-					</button>
-					<button type="button" class="btn btn-default" id="tb-collect-out">
-						Collect out
-					</button>
-				</div>
-
-        <div class="btn-group ">
-					<button type="button" class="btn btn-default" id="tb-split">
-						Split out
-					</button>
-					<button type="button" class="btn btn-default" id="tb-merge">
-						Merge in
-					</button>
-				</div>
-
-				<button type="button" class="btn btn-default " id="tb-eval">
-					Evaluate/Simplify
-				</button>
-				<button type="button" class="btn btn-default" id="tb-operate">
-					Operate
-				</button>
-        <button type="button" class="btn btn-default" id="tb-cancel-out">
-					Cancel out
-				</button>
-			</div>
-		</div>
-		<div class="row">
-			<p id="MathInput">Input some equation (<a id="show_latex">show LaTeX</a>): <span id="mathquill" >...</span>
-			<input size="50"/>
-			<button type="button" class="btn btn-default" id="keep">
-					Keep
-			</button>
-			</p>
-			<div class="math-container">
-				<p id="math">...</p>
-			</div>
-		</div>
-	</div> <!--end of MAIN PANEL-->
-<!--</div> end of div for qunit testing the DOM-->
-
-<div class="col-md-3"> <!--EQATIONS PANEL-->
-	<div id="tabs">
-		<ul>
-			<li><a href="#equations">Equations</a></li>
-			<li><a href="#history">History</a></li>
-		</ul>
-		<div id="equations">
-			<p>Add: <input size="35" id="add_eq"/></p>
-			<div id="eq_list" class="list-group">
-			</div>
-		</div>
- 		<div id="history">
- 			<div id="history_list" class="list-group">
-			</div>
- 		</div>
-	</div>
-</div><!--end of EQATIONS PANEL-->
-
-</div> <!--end of container-->
+</div>
 
 <!--testing-->
-<div class="container-fluid">
+<!-- <div class="container-fluid">
   <div id="qunit"></div>
 </div>
-<script src="js/next/final/tests.js"></script>
+<script src="js/next/final/tests.js"></script> -->
 
-
-<script src="js/next/algebrite.bundle-for-browser.js"></script>
-
-<script src="js/next/final/augmath.js"></script>
 
 </body>
