added subscript; reactified even more; fixed some bugs

--- a/client/main.html
+++ b/client/main.html
@@ -59,19 +59,18 @@
 //GLOBAL VARIABLES
 var h_eq_shift=0,
   v_eq_shift=0,
-  equals_position = {left: 0, top: 100},
-  manip = "term",
-  depth = 1,
-  multi_select = false,
-  var_select = false,
-  replace_ind = false,
+  // equals_position = {left: 0, top: 100},
+  // manip = "term",
+  // depth = 1,
+  // multi_select = false,
+  // var_select = false,
+  // replace_ind = false,
   step_duration = 700,
-  TEST,
-  inner_select = false,
+  // TEST,
   math_root,
-  $selected = $(),
-  selected_nodes = [],
-  selected_text = "",
+  // $selected = $(),
+  // selected_nodes = [],
+  // selected_text = "",
   math_str = [],
   //for recording
   current_index = 0,
@@ -84,7 +83,7 @@ var h_eq_shift=0,
   //for multi-equation
   equations = [];
 
-  var math_str_el;
+  // var math_str_el;
   var mathquill;
 </script>
 
